deploy-openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rgb-service-v1
  labels:
    app: rgb-service
spec:
  selector:
    app: rgb-service
  ports:
  - port: 8080
    targetPort: 8080
  type: LoadBalancer
