deploy-openshift/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: all 
  labels:
    app: rgb-service
spec: 
  port:
    targetPort: 8080
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: rgb-service-v1
    weight: 100
